--- a/CAFFStoreProject/frontend/caff-store/src/app/component/main/main.component.html
+++ b/CAFFStoreProject/frontend/caff-store/src/app/component/main/main.component.html
@@ -1,1 +1,12 @@
-<p>main works!</p>
+<header>
+    <div class="brand">
+        <h5>CAFF Store - Virucid</h5>
+    </div>
+    <div>
+        <button mat-raised-button style="width:8vw" color="primary">Upload</button>
+    </div>
+</header>
+
+<div class="container">
+    <p>main works!</p>
+</div>
