Add navigation between login and registration

--- a/CAFFStoreProject/frontend/caff-store/src/app/component/login/login.component.html
+++ b/CAFFStoreProject/frontend/caff-store/src/app/component/login/login.component.html
@@ -5,6 +5,7 @@
 </header>
 
 <div class="container">
+    <p>Don't have an account? <a routerLink="/registration">Register</a></p>
     <form class="example-form">
         <mat-form-field style="width:20vw" appearance="outline" class="example-full-width">
             <mat-label>Email</mat-label>
