--- a/CAFFStoreProject/frontend/caff-store/src/app/component/registration/registration.component.html
+++ b/CAFFStoreProject/frontend/caff-store/src/app/component/registration/registration.component.html
@@ -6,6 +6,7 @@
 
 <div class="container">
     <div>
+        <p class="login-center">Already have an account? <a routerLink="/login">Login</a></p>
         <mat-form-field style="width:30vw" appearance="outline" [hideRequiredMarker]="true">
             <mat-label>Name</mat-label>
             <input type="text" matInput placeholder="Enter your name" [(ngModel)]="user.personName"
