Add login redirection and logout button

--- a/CAFFStoreProject/frontend/caff-store/src/app/component/main/main.component.html
+++ b/CAFFStoreProject/frontend/caff-store/src/app/component/main/main.component.html
@@ -2,7 +2,8 @@
     <div class="brand">
         <h5>CAFF Store - Virucid</h5>
     </div>
-    <button mat-raised-button style="width:8vw" color="primary" (click)="navigateToProfile()">Profile</button>
+    <button mat-raised-button style="width:6vw" color="primary" (click)="navigateToProfile()">Profile</button>
+    <button mat-raised-button style="width:6vW" color="secondary" (click)="logout()">Logout</button>
 </header>
 
 <div class="container">
