--- a/CAFFStoreProject/frontend/caff-store/src/app/component/main/main.component.html
+++ b/CAFFStoreProject/frontend/caff-store/src/app/component/main/main.component.html
@@ -2,28 +2,28 @@
     <div class="brand">
         <h5>CAFF Store - Virucid</h5>
     </div>
-    <button mat-raised-button style="width:6vw" color="primary" (click)="navigateToProfile()">Profile</button>
-    <button mat-raised-button style="width:6vW" color="secondary" (click)="logout()">Logout</button>
+    <button mat-raised-button color="primary" (click)="navigateToProfile()">Profile</button>
+    <button mat-raised-button color="secondary" (click)="logout()">Logout</button>
 </header>
 
 <div class="container">
-    <ngx-file-drop dropZoneLabel="Drop files here" id="image-drop-box" (onFileDrop)="dropped($event)" accept=".caff"
-        multiple="false">
+    <ngx-file-drop dropZoneLabel="Drop files here" id="image-drop-box" (onFileDrop)="dropped($event)" accept=".caff" multiple="false">
         <ng-template ngx-file-drop-content-tmp let-openFileSelector="openFileSelector">
-            <span>
-                Húzza ide a képet a feltöltéshez
-            </span>
+            <span>Drop a file here to upload</span>
         </ng-template>
     </ngx-file-drop>
-    <div>
-        <button mat-raised-button style="width:8vw" color="primary" (click)="uploadCaff()">Upload</button>
+    <div class="uploadBtn">
+        <button mat-raised-button color="primary" (click)="uploadCaff()">Upload</button>
     </div>
+    <br>
+    <br>
 </div>
-<div *ngFor="let caff of caffs" style="display: inline-block; width: 28em; margin-left: 8em; margin-right: 1em;">
+
+<div class="cards" *ngFor="let caff of caffs">
     <mat-card class="example-card">
         <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
         <mat-card-actions>
-            <button mat-raised-button style="width:8vw" color="primary" (click)="navigateToDetails(caff.id)">Details</button>
+            <button mat-raised-button class="cardBtn" color="primary" (click)="navigateToDetails(caff.id)">Details</button>
         </mat-card-actions>
     </mat-card>
 </div>
