--- a/CAFFStoreProject/frontend/caff-store/src/app/component/registration/registration.component.html
+++ b/CAFFStoreProject/frontend/caff-store/src/app/component/registration/registration.component.html
@@ -5,55 +5,55 @@
 </header>
 
 <div class="container">
-    <div>
-        <p class="login-center">Already have an account? <a routerLink="/login">Login</a></p>
-        <mat-form-field style="width:30vw" appearance="outline" [hideRequiredMarker]="true">
-            <mat-label>Name</mat-label>
-            <input type="text" matInput placeholder="Enter your name" [(ngModel)]="newUser.personName"
-                [formControl]="nameFormControl">
-            <mat-error *ngIf="nameFormControl.hasError('required')">
-                Name is <strong>required</strong>
-            </mat-error>
-        </mat-form-field>
-    </div>
     <form class="example-form">
-        <mat-form-field style="width:30vw" appearance="outline" class="example-full-width">
-            <mat-label>Email</mat-label>
-            <input matInput type="text" maxlength="100" [(ngModel)]="newUser.email" [formControl]="emailFormControl"
-                placeholder="exapmle@exapmle.com">
-            <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-                Please enter a valid email address
-            </mat-error>
-            <mat-error *ngIf="emailFormControl.hasError('required')">
-                Email is <strong>required</strong>
-            </mat-error>
-        </mat-form-field>
+        <div>
+            <p class="align-center">Already have an account? <a routerLink="/login">Login</a></p>
+            <mat-form-field style="width:30vw" appearance="outline" [hideRequiredMarker]="true">
+                <mat-label>Name</mat-label>
+                <input type="text" matInput placeholder="Enter your name" [(ngModel)]="newUser.personName"
+                    [formControl]="nameFormControl">
+                <mat-error *ngIf="nameFormControl.hasError('required')">
+                    Name is <strong>required</strong>
+                </mat-error>
+            </mat-form-field>
+        </div>
+            <mat-form-field style="width:30vw" appearance="outline" class="example-full-width">
+                <mat-label>Email</mat-label>
+                <input matInput type="text" maxlength="100" [(ngModel)]="newUser.email" [formControl]="emailFormControl"
+                    placeholder="exapmle@exapmle.com">
+                <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+                    Please enter a valid email address
+                </mat-error>
+                <mat-error *ngIf="emailFormControl.hasError('required')">
+                    Email is <strong>required</strong>
+                </mat-error>
+            </mat-form-field>
+        <div>
+            <!--password input filed-->
+            <mat-form-field appearance="outline" style="width:30vw" [color]="passwordComponent.color">
+                <mat-label>Password</mat-label>
+                <mat-pass-toggle-visibility #toggle matSuffix></mat-pass-toggle-visibility>
+                <input matInput #password [type]="toggle.type" required placeholder="Password" [(ngModel)]="newUser.password"
+                    [formControl]="passwordFormControl">
+                <mat-error *ngIf="passwordFormControl.hasError('required')">
+                    Password is <strong>required</strong>
+                </mat-error>
+                <mat-hint align="end" aria-live="polite">
+                    {{password.value.length}} / {{passwordComponent.max}}
+                </mat-hint>
+            </mat-form-field>
+            <!--@angular-material-extensions/password-strength's main component-->
+            <mat-password-strength #passwordComponent [password]="password.value">
+            </mat-password-strength>
+            <!--Password's strength info-->
+            <mat-password-strength-info *ngIf="showDetails" [passwordComponent]="passwordComponent">
+            </mat-password-strength-info>
+        </div>
+        <br>
+        <div class="align-center">
+            <button mat-raised-button style="width:8vw"
+                [disabled]="passwordFormControl.invalid || emailFormControl.invalid || nameFormControl.invalid"
+                color="primary" (click)=register()>Sign up</button>
+        </div>
     </form>
-    <div>
-        <!--password input filed-->
-        <mat-form-field appearance="outline" style="width:30vw" [color]="passwordComponent.color">
-            <mat-label>Password</mat-label>
-            <mat-pass-toggle-visibility #toggle matSuffix></mat-pass-toggle-visibility>
-            <input matInput #password [type]="toggle.type" required placeholder="Password" [(ngModel)]="newUser.password"
-                [formControl]="passwordFormControl">
-            <mat-error *ngIf="passwordFormControl.hasError('required')">
-                Password is <strong>required</strong>
-            </mat-error>
-            <mat-hint align="end" aria-live="polite">
-                {{password.value.length}} / {{passwordComponent.max}}
-            </mat-hint>
-        </mat-form-field>
-        <!--@angular-material-extensions/password-strength's main component-->
-        <mat-password-strength #passwordComponent [password]="password.value">
-        </mat-password-strength>
-        <!--Password's strength info-->
-        <mat-password-strength-info *ngIf="showDetails" [passwordComponent]="passwordComponent">
-        </mat-password-strength-info>
-    </div>
-    <br>
-    <div>
-        <button mat-raised-button style="width:8vw"
-            [disabled]="passwordFormControl.invalid || emailFormControl.invalid || nameFormControl.invalid"
-            color="primary" (click)=register()>Sign up</button>
-    </div>
 </div>
