User id in local storage, profile header, router navigation

--- a/CAFFStoreProject/frontend/caff-store/src/app/component/profile/profile.component.html
+++ b/CAFFStoreProject/frontend/caff-store/src/app/component/profile/profile.component.html
@@ -1,1 +1,7 @@
-<p>profile works!</p>
+<header>
+    <div class="brand">
+        <h5><a routerLink="/main">CAFF Store - Virucid</a></h5>
+    </div>
+    <button mat-raised-button color="primary">Profile</button>
+    <button mat-raised-button color="secondary" (click)="logout()">Logout</button>
+</header>
