--- a/CAFFStoreProject/frontend/caff-store/src/app/component/detail/detail.component.html
+++ b/CAFFStoreProject/frontend/caff-store/src/app/component/detail/detail.component.html
@@ -1,1 +1,28 @@
-<p>detail works!</p>
+<header>
+    <div class="brand">
+        <h5>CAFF Store - Virucid</h5>
+    </div>
+</header>
+
+<div class="container">
+    <div>
+        <img mat-card-image src="https://image.shutterstock.com/image-vector/ui-image-placeholder-wireframes-apps-260nw-1037719204.jpg" alt="Photo of a Caff preview">
+        <mat-card-actions>
+            <button mat-raised-button class="cardBtn" color="primary"
+                (click)="downloadCaff()">Download</button>
+        </mat-card-actions>
+    </div>
+    <div>
+        <mat-list role="list">
+            <mat-list-item role="listitem">Item 1</mat-list-item>
+            <mat-list-item role="listitem">Item 2</mat-list-item>
+            <mat-list-item role="listitem">Item 3</mat-list-item>
+        </mat-list>
+    </div>
+    <div>
+        <mat-form-field class="example-full-width">
+            <mat-label>Leave a comment</mat-label>
+            <textarea matInput placeholder="Ex. It makes me feel..."></textarea>
+        </mat-form-field>
+    </div>
+</div>
