add comment & download caff endpoints; fix registration, main, details page responsiveness

--- a/CAFFStoreProject/frontend/caff-store/src/app/component/detail/detail.component.html
+++ b/CAFFStoreProject/frontend/caff-store/src/app/component/detail/detail.component.html
@@ -22,7 +22,7 @@
     <div>
         <mat-form-field class="example-full-width">
             <mat-label>Leave a comment</mat-label>
-            <textarea matInput placeholder="Ex. It makes me feel..."></textarea>
+            <textarea matInput placeholder="This makes me feel..."></textarea>
         </mat-form-field>
     </div>
 </div>
