--- a/CAFFStoreProject/frontend/caff-store/src/app/component/detail/detail.component.scss
+++ b/CAFFStoreProject/frontend/caff-store/src/app/component/detail/detail.component.scss
@@ -36,6 +36,30 @@
      -webkit-background-clip: text;
  }
 
- .align-center {
-     text-align: center;
- }
+ button {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    display: flex;
+    justify-content: center;
+    margin: 6px;
+    text-align: center;
+    flex-wrap: wrap;
+    letter-spacing: 0.5px;
+}
+
+button.cardBtn {
+    min-width: 12vw;
+    width: 15vw;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+mat-card-actions {
+    display: flex;
+    justify-content: center;
+}
+
+img {
+    min-width: 100px;
+    width: 600px;
+}
