--- a/CAFFStoreProject/frontend/caff-store/src/app/component/main/main.component.html
+++ b/CAFFStoreProject/frontend/caff-store/src/app/component/main/main.component.html
@@ -12,7 +12,7 @@
         <ng-template ngx-file-drop-content-tmp let-openFileSelector="openFileSelector">
             <span *ngIf="caffFiles.length == 0">Drop a file here to upload</span>
             <span *ngIf="caffFiles.length > 0">
-                {{isValidFile?caffFiles.length:''}}{{isValidFile?' darab caff feltöltve!':'Hiba! Max 1db caff fájl'}}
+                {{isValidFile?caffFiles.length:''}}{{isValidFile?' caff file dropped!':'Error! Drop maximum one file!'}}
             </span>
         </ng-template>
     </ngx-file-drop>
@@ -25,7 +25,7 @@
 
 <div class="cards" *ngFor="let caff of caffs">
     <mat-card class="example-card">
-        <img mat-card-image [src]="caff.bitmapFileName" alt="Photo of a Shiba Inu">
+        <img mat-card-image [src]="caff.bitmapFileName" alt="Caff preview">
         <mat-card-actions>
             <button mat-raised-button class="cardBtn" color="primary"
                 (click)="navigateToDetails(caff.id)">Details</button>
