--- a/CAFFStoreProject/frontend/caff-store/src/app/component/main/main.component.scss
+++ b/CAFFStoreProject/frontend/caff-store/src/app/component/main/main.component.scss
@@ -31,6 +31,8 @@ h5 {
 button {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
+    display: flex;
+    justify-content: center;
     margin: 6px;
     width: 12%;
     text-align: center;
