--- a/CAFFStoreProject/frontend/caff-store/src/app/component/admin/admin.component.scss
+++ b/CAFFStoreProject/frontend/caff-store/src/app/component/admin/admin.component.scss
@@ -144,11 +144,11 @@ mat-header-cell {
   justify-content: flex-start;
 }
 
-mat-header-cell, mat-cell {
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  padding: 8px;
-}
+// mat-header-cell, mat-cell {
+//   border-top: 1px solid #ddd;
+//   border-bottom: 1px solid #ddd;
+//   padding: 8px;
+// }
 
 mat-row:nth-child(even){background-color: #f2f2f2;}
 
