--- a/CAFFStoreProject/frontend/caff-store/src/app/component/detail/detail.component.html
+++ b/CAFFStoreProject/frontend/caff-store/src/app/component/detail/detail.component.html
@@ -14,7 +14,16 @@
     <div class="example-full-width" style="margin-top: 2em;">
         <mat-form-field class="example-full-width">
             <mat-label>Leave a comment</mat-label>
-            <textarea matInput placeholder=""></textarea>
+            <input matInput #message maxlength="1024" (change)="change($event)" [(ngModel)]="commentText">
+            <button mat-button *ngIf="commentText" matSuffix mat-icon-button aria-label="Clear"
+                (click)="commentText=''">
+                <mat-icon>close</mat-icon>
+            </button>
+            <mat-hint align="end">{{message.value.length}} / 1024</mat-hint>
         </mat-form-field>
+    </div>
+    <div>
+        <button mat-raised-button class="cardBtn" color="primary" style="width:8vw" [disabled]="!commentText"
+            (click)="comment()">Comment</button>
     </div>
 </div>
