--- a/CAFFStoreProject/frontend/caff-store/src/app/component/profile/profile.component.html
+++ b/CAFFStoreProject/frontend/caff-store/src/app/component/profile/profile.component.html
@@ -26,9 +26,10 @@
     </div>
     <h2 class="align-center pt-3">Uploaded files</h2>
     <div class="example-full-width">
-        <mat-list role="list" *ngFor="let caff of caffFiles">
-            <mat-list-item role="listitem" appearance="outline">{{ caff }}</mat-list-item>
-            <mat-divider></mat-divider>
-        </mat-list>
+        <mat-action-list role="list" *ngFor="let caff of caffFiles">
+            <button mat-list-item role="listitem" (click)="navigateToDetails(caff.id)">
+                {{ caff.originalFileName }}
+            </button>
+        </mat-action-list>
     </div>
 </div>
