--- a/CAFFStoreProject/frontend/caff-store/src/app/component/detail/detail.component.html
+++ b/CAFFStoreProject/frontend/caff-store/src/app/component/detail/detail.component.html
@@ -7,19 +7,19 @@
     </div>
     <div class="example-full-width">
         <mat-list role="list" *ngFor="let comment of comments | keyvalue">
-            <mat-list-item role="listitem" appearance="outline">{{comment.value}} -- Posted at: {{comment.key}}</mat-list-item>
+            <mat-list-item role="listitem" appearance="outline">{{comment.key}} : {{comment.value}}</mat-list-item>
             <mat-divider></mat-divider>
         </mat-list>
     </div>
     <div class="example-full-width" style="margin-top: 2em;">
         <mat-form-field class="example-full-width">
             <mat-label>Leave a comment</mat-label>
-            <input matInput #message maxlength="1024" [(ngModel)]="commentText">
+            <input matInput #message maxlength="100" [(ngModel)]="commentText">
             <button mat-button *ngIf="commentText" matSuffix mat-icon-button aria-label="Clear"
                 (click)="commentText=''">
                 <mat-icon>close</mat-icon>
             </button>
-            <mat-hint align="end">{{message.value.length}} / 1024</mat-hint>
+            <mat-hint align="end">{{message.value.length}} / 100</mat-hint>
         </mat-form-field>
     </div>
     <div>
